--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Django==5.2.4
 django-cors-headers==4.7.0
 django-storages==1.14.6
 djangorestframework==3.16.0
+gunicorn==23.0.0
 idna==3.10
 isodate==0.7.2
 itypes==1.2.0
